--- a/docs/_org/usage_tools.org
+++ b/docs/_org/usage_tools.org
@@ -1,4 +1,4 @@
-Overview of 'harpwise tools':
+*** Overview of 'harpwise tools'
 
   The mode 'tools' offers some non-interactive but useful utilities,
   which are mostly related to basic harmonica theory; they do not use
@@ -129,7 +129,7 @@ Overview of 'harpwise tools':
 
   
 
-Usage by Examples:
+*** Usage by Examples
 
   Transpose a sequence of notes (some specified as holes) from
   the key of c to g (keeping the notes/pitches constant):
