--- a/docs/erb-org/index.erb.org
+++ b/docs/erb-org/index.erb.org
@@ -62,6 +62,16 @@
   
   [[../images/harpwise-quiz.gif]]
 
+* Installation
+
+  The latest version of harpwise is a available as a snap:
+
+  #+begin_src
+    sudo snap install harpwise
+  #+end_src
+  
+  this also works quite well for WSL2/Windows.
+     
 * Invoking harpwise
 
   Harpwise is a commandline-program, so you need to open a termnal. The
@@ -85,14 +95,14 @@
 
   #+begin_src
     harpwise
-  #end_src
+  #+end_src
 
   this will issue a text on using harpwise, that you may also read in the
   next section of this page.
 
 * Getting started with harpwise
 
-  <%= cleanup_for_html(IO.read("../_org/usage.org")) %>
+<%= IO.read("../_org/usage.org") %>
 
 * The Modes
 
@@ -104,44 +114,127 @@
 
   [[../images/harpwise-listen.gif]]
   
-   <%= cleanup_for_html(IO.read("../_org/usage_listen.org")) %>
+<%= IO.read("../_org/usage_listen.org") %>
 
 ** Quiz
 
   [[../images/harpwise-quiz.gif]]
   
-   <%= cleanup_for_html(IO.read("../_org/usage_quiz.org")) %>
+<%= IO.read("../_org/usage_quiz.org") %>
 
 ** Jamming
 
-   <%= cleanup_for_html(IO.read("../_org/usage_jamming.org")) %>
+<%= IO.read("../_org/usage_jamming.org") %>
 
 ** Licks
 
-   <%= cleanup_for_html(IO.read("../_org/usage_licks.org")) %>
+<%= IO.read("../_org/usage_licks.org") %>
 
 ** Play
 
-   <%= cleanup_for_html(IO.read("../_org/usage_play.org")) %>
+<%= IO.read("../_org/usage_play.org") %>
 
 ** Tools
 
-   <%= cleanup_for_html(IO.read("../_org/usage_tools.org")) %>
+<%= IO.read("../_org/usage_tools.org") %>
 
 ** Samples
 
-   <%= cleanup_for_html(IO.read("../_org/usage_samples.org")) %>
+<%= IO.read("../_org/usage_samples.org") %>
                   
-* Installation
+* A closer look at the Screen (mode listen)
 
-  The latest version of harpwise is a available as a snap:
+  The Screenshot below is from mode listen. This view presents a lot of
+  information about the holes you are playing, including its musical
+  context. Note the added line-numbers, that will be used in the
+  explanations below.
+  
+  #+begin_src text -n
+Play from 4 scales                              SPACE to pause; h for help
+listen richter c blues,1,4,5
+                                                    4     full bend
+                                          -    5    1     half bend
+      b4    4   b14  b45   4   b14  b45   4   b14  45     blow
 
-  #+begin_src
-    sudo snap install harpwise
+     --1----2----3----4----5----6----7----8----9---10---------
+
+      b5   b14   1   b15  b1   b5    1   b15  b1   b5     draw
+       b    5   b4    b         b                         half bend
+            b    5                                        full bend
+                 -                                         3/2 bend
+Hole:    +4, Note:   c5, Ref:   --
+Frequency:   531.0 Hz,   26 Cnt  [.........:....I....]
+Interval:   +4  to   +1  is 12 st  , Octave
+
+                               ▄▄▄▄▄
+                         ▄▄▄   █
+                        █▀  ▀  ▀▀▀▀▄▄
+                        █           █
+                        ▀█▄▄▀  ▀▄▄▄█▀
+
+
+Featuring Sonny Boy Williamson
   #+end_src
   
-  this also works quite well for WSL2/Windows.
-     
+  Now if you start harpwise e.g. in mode listen, or licks or some flavours
+  of quiz, you get a screen as shown in the screenshots above.
+
+  Its structure is as follows (top to bottom):
+
+  - Header, the first two lines 1 and 2
+  - The 'display', lines 3 to 12
+  - The middle part of the screen, lines 13 to 15
+  - The 'comment', lines 16 to 22
+  - Footer, the two bottommost 2 lines, 23 and 24
+
+** The header
+
+   Two topmost two lines, that show e.g.
+   - The current mission, i.e. what you are supposed to do
+   - Immediate feedback on keys beeing pressed or a hint on how to get
+     help
+   - A summary of the settings mode, type, key and scales
+
+** The 'display'
+
+   This part of the screen (i.e. most of its upper half) shows different
+   versions of a harmonica chart as known from textbooks. In addition, the
+   holes, that you are playing are highlighted in colours, e.g. according
+   to the scale.
+
+   To change the display type 'd' repeatedly or type 'D' to get a menu
+   with descriptions.
+
+** The middle part of the screen
+
+   The three middle lines of the screen show:
+
+   - The hole and note, that you are playing and the reference hole, if
+     set. In addtion ('Rem') the scales the hole belongs to
+   - The Frequency you are playing; featuring a small frequncy gauge
+   - The interval of the current hole to the reference hole or to the last
+     hole played
+        
+** The 'comment'
+
+   This part of the screen (i.e. most of its lower half) shows comments;
+   e.g. when in mode licks, harpwise expects you to play a sequence of
+   holes, the comment-region shows the sequence of holes that you have
+   already played or are expected to play.
+
+   To change the comment type 'c' repeatedly or type 'C' to get a menu
+   with one-line descriptions.
+
+** The footer
+
+   Within those two lines at the bottom, harpwise shows hints and various
+   remarks on its operation.
+
+   For example:
+   
+   - In mode licks, details about the current lick
+   - In mode listen, if idle, notes about famous harp-players
+
 * Getting help
 
   If you have problems, questions or just want to give feedback, please
@@ -155,7 +248,9 @@
   This is the user-modifyable configuration file, that will be created on
   first invocation:
 
-  ~/harpwise/config.ini
+  #+begin_src
+    ~/harpwise/config.ini
+  #+end_src
 
   There you may override many settings and programs default.  The file is
   commented extensively, so please read there for details on the various
@@ -258,97 +353,4 @@
    sample generation or when your samples need to be judged against some
    standard. In such cases it generally uses 'equal temperament' (ET for
    short).
-
-* A closer look at the Screen (mode listen)
-
-  The Screenshot below is from mode listen. This view presents a lot of
-  information about the holes you are playing, including its musical
-  context. Note the added line-numbers, that will be used in the
-  explanations below.
-  
-  #+begin_src text -n
-Play from 4 scales                              SPACE to pause; h for help
-listen richter c blues,1,4,5
-                                                    4     full bend
-                                          -    5    1     half bend
-      b4    4   b14  b45   4   b14  b45   4   b14  45     blow
-
-     --1----2----3----4----5----6----7----8----9---10---------
-
-      b5   b14   1   b15  b1   b5    1   b15  b1   b5     draw
-       b    5   b4    b         b                         half bend
-            b    5                                        full bend
-                 -                                         3/2 bend
-Hole:    +4, Note:   c5, Ref:   --
-Frequency:   531.0 Hz,   26 Cnt  [.........:....I....]
-Interval:   +4  to   +1  is 12 st  , Octave
-
-                               ▄▄▄▄▄
-                         ▄▄▄   █
-                        █▀  ▀  ▀▀▀▀▄▄
-                        █           █
-                        ▀█▄▄▀  ▀▄▄▄█▀
-
-
-Featuring Sonny Boy Williamson
-  #+end_src
-  
-  Now if you start harpwise e.g. in mode listen, or licks or some flavours
-  of quiz, you get a screen as shown in the screenshots above.
-
-  Its structure is as follows (top to bottom):
-
-  - Header, the first two lines 1 and 2
-  - The 'display', lines 3 to 12
-  - The middle part of the screen, lines 13 to 15
-  - The 'comment', lines 16 to 22
-  - Footer, the two bottommost 2 lines, 23 and 24
-
-** The header
-
-   Two topmost two lines, that show e.g.
-   - The current mission, i.e. what you are supposed to do
-   - Immediate feedback on keys beeing pressed or a hint on how to get
-     help
-   - A summary of the settings mode, type, key and scales
-
-** The 'display'
-
-   This part of the screen (i.e. most of its upper half) shows different
-   versions of a harmonica chart as known from textbooks. In addition, the
-   holes, that you are playing are highlighted in colours, e.g. according
-   to the scale.
-
-   To change the display type 'd' repeatedly or type 'D' to get a menu
-   with descriptions.
-
-** The middle part of the screen
-
-   The three middle lines of the screen show:
-
-   - The hole and note, that you are playing and the reference hole, if
-     set. In addtion ('Rem') the scales the hole belongs to
-   - The Frequency you are playing; featuring a small frequncy gauge
-   - The interval of the current hole to the reference hole or to the last
-     hole played
-        
-** The 'comment'
-
-   This part of the screen (i.e. most of its lower half) shows comments;
-   e.g. when in mode licks, harpwise expects you to play a sequence of
-   holes, the comment-region shows the sequence of holes that you have
-   already played or are expected to play.
-
-   To change the comment type 'c' repeatedly or type 'C' to get a menu
-   with one-line descriptions.
-
-** The footer
-
-   Within those two lines at the bottom, harpwise shows hints and various
-   remarks on its operation.
-
-   For example:
-   
-   - In mode licks, details about the current lick
-   - In mode listen, if idle, notes about famous harp-players
 
